2013-04-10  WooHyun Jung

        * Edje: When cursor is located to each edge, entry now doesn't grab events for cursor movement.

2013-04-10  Carsten Haitzler (The Rasterman)

        * Evas: Add glx buffer age support for automatic partial
          redraw in glx.

2013-04-09  Jérémy Zurcher (jeyzu)

        * Eina: Add eina_inlist_first and eina_inlist_last

2013-04-08  Tom Hacohen

        * Evas font: Fix a bug with cluster size calculation with texts ending
	with ligatures.

2013-04-08  Carsten Haitzler (The Rasterman)

        * Evas: Add control API for multiple outputs (non-functional).

2013-04-05  Cedric Bail

        * Evas: Fix over redrawing of Evas_Map when applied on smart object.

2013-04-04  Jiyoun Park

        * Evas font: fix font source have wrong current size.

2013-04-04  Tom Hacohen

        * Evas font: If OS/2 table is available and the font is demi-bold,
	  don't do runtime emboldment.

2013-04-04  Yakov Goldberg

        * Evas font: char position, returned by
          evas_common_font_query_char_at_coords(),
          depends on left/right half of char and its direction.

2013-03-04  Cedric Bail

        * Evas: fix crash with Buffer engine with non alpha output.

2013-03-30  Cedric Bail

	* Evil: Add mkdtemp.

2013-03-29  Carsten Haitzler (The Rasterman)

        * Fix edje entry to resepct filter callbacks and not clear
        selections if filters filter out all contents.

2013-03-28  Cedric Bail

	* Ecore: automatically turn on Systemd watchdog in Ecore main loop.

2013-03-28  Carsten Haitzler (The Rasterman)

        * Change evas_textblock_cursor_word_start() and
        evas_textblock_cursor_word_end() to walk extra whitespaces when
        moving up and down words that tends to look more like other
        toolkits (gtk, qt). the docs dont specifically say the rules
        on word finding, so being consistent is better i believe and
        so we can assume the prior behavior is a bug.

2013-03-27  Cedric Bail
