@@ -72,6 +72,7 @@ Additions:
      - Add engine specific alpha_get.
      - Add multiple output support API.
      - Add buffer age support to gl for automatic partial redraws.
+     - Add GLX_MESA_release_buffers suppport to release unused buffers.
     * Add ecore_audio API
     * Add eet_mmap.
     * added eet_data_descriptor_name_get()
